kubernetes/overlays/stg/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: axiomnode-ingress
  labels:
    app.kubernetes.io/part-of: axiomnode
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`axiomnode-gateway.amksandbox.cloud`)
      kind: Rule
      services:
        - name: api-gateway
          port: 7005

    - match: Host(`axiomnode-backoffice.amksandbox.cloud`)
      kind: Rule
      services:
        - name: backoffice
          port: 80
